# amaunator

./: README.md  pyproject.toml
src/amaunator/: main.py  models.py  outputs.py
src/amaunator/api/: routes.py
src/amaunator/config/: logging.py  settings.py
src/amaunator/core/: manager.py  metrics.py  monitoring.py
tests/: test_api.py  test_manager.py
